default-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: tylt-edit
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.frontend.rule.type: ReplacePath
spec:
  rules:
  - host: edit.NAMESPACE_VAR.kubernetes.thetylt.com
    http:
      paths:
      - path: /editors/sign_in
        backend:
          serviceName: tylt-ruby
          servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: tylt-NAMESPACE_VAR
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: NAMESPACE_VAR.kubernetes.thetylt.com
    http:
      paths:
      - path: /
        backend:
          serviceName: tylt-ruby
          servicePort: 80
      - path: /socket.io
        backend:
          serviceName: tylt-pusher-node
          servicePort: 80
          
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: tylt-NAMESPACE_VAR-api
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: api.NAMESPACE_VAR.kubernetes.thetylt.com
    http:
      paths:
      - path: /
        backend:
          serviceName: tylt-ruby
          servicePort: 80
